Fix media query z-index values on main to allow use of inputs in mobile versions

--- a/styles.css
+++ b/styles.css
@@ -264,7 +264,7 @@ footer p {
     width: 100%;
     position: sticky;
     height: 130px;
-    /* z-index: 500; */
+    z-index: 500;
   }
 
   .starred-inactive {
@@ -282,13 +282,12 @@ footer p {
     border-left: none;
     position: relative;
     top: 60px;
-    z-index: -1;
   }
 
   .shade-area-on {
     filter: brightness(0.4);
   }
-  
+
   .bottom-section {
     justify-content: space-around;
   }
@@ -364,7 +363,6 @@ footer p {
     border-left: none;
     position: relative;
     top: 60px;
-    z-index: -1;
   }
 
   .shade-area-on {
@@ -405,8 +403,8 @@ footer p {
    aside {
      width: 100%;
      padding: 10px;
-     z-index: 500;
      position: absolute;
+     z-index: 500;
    }
 
    body {
@@ -452,7 +450,6 @@ footer p {
      border-left: none;
      position: relative;
      top: 60px;
-     z-index: -1;
    }
 
    .menu-close {
